# kiosker

./: CMakeLists.txt  COPYING  README.md
src/: CMakeLists.txt
src/include/: common.h
src/kioskcmd/: CMakeLists.txt  kioskcmd.c
src/kiosker/: CMakeLists.txt  kiosker.c
